<resources>
    <string name="app_name">Park Space</string>
    <string name="empty_view_title_text">Vehicle not found</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete All Vehicles</string>
    <string name="editor_activity_title_new_vehicle">Add Vehicle</string>
    <string name="editor_activity_title_edit_pet">Edit Vehicle</string>
    <string name="number_plate_text">Number Plate</string>
    <string name="hint_state_code">TN</string>
    <string name="hint_district_code">01</string>
    <string name="hint_series_code">AA</string>
    <string name="hint_number_code">0000</string>
    <string name="vehicle_info">Vehicle description</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_car">Car</string>
    <string name="vehicle_bike">Bike</string>
    <string name="delete_dialog_msg">Delete this vehicle?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancle</string>
    <string name="editor_delete_vehicle_failed">Error with deleting vehicle</string>
    <string name="editor_delete_vehicle_successful">Vehicle deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_vehicle_failed">Error with saving vehicle</string>
    <string name="editor_insert_vehicle_successful">Vehicle saved</string>
    <string name="editor_update_vehicle_failed">Error with updating vehicle</string>
    <string name="editor_update_vehicle_successful">Vehicle updated</string>
    <string name="vehicle_unknown">Unknown</string>
    <string name="find_Space">Find Space</string>
    <string name="logout">Logout</string>
    <string name="user_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_acc">Create Account</string>
    <string name="visitor_acc">Visitor</string>
    <string name="separator">-</string>
    <string name="user_name">Name</string>
    <string name="user_email_id">Email Id</string>
    <string name="user_register_no">Register No</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_password_confirm">Confirm Password</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="find_Location">Find Location</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="user_not_found">User not found</string>
    <string name="user_type_registered">COLLEGE MEMBER</string>
    <string name="user_type_visitor">VISITOR</string>
    <string name="user_id">User ID</string>
</resources>
