<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".VehicleEditor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_plate_text"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/state_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_state_code"
            android:inputType="text"
            android:maxLength="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/district_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_district_code"
            android:inputType="numberDecimal"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/series_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_series_code"
            android:inputType="text"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/number_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number_code"
            android:inputType="number"
            android:maxLength="4" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/vehicle_type" />

    <Spinner
        android:id="@+id/select_vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_info"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/vehicle_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

</LinearLayout>