<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_acc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="22dp">

    <EditText
        android:id="@+id/acc_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/acc_email_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_email_id" />

    <EditText
        android:id="@+id/acc_register_no"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_register_no" />

    <EditText
        android:id="@+id/acc_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/acc_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_password_confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/acc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FFB101"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/acc_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:background="#FFB101"
        android:textColor="#000000"/>

    <ProgressBar
        android:id="@+id/loading_indicator_create_account"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_centerInParent="true" />

</LinearLayout>